Fixed unlock screen not working anymore on windows